# ui-analyser

./: .env.example  .gitignore  .prettierrc  API_INTEGRATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/agent/: .dockerignore  .env.example  API_README.md  Dockerfile  ai_analyzer.py  analyzer.py  client_example.py  config.py  docker-build.sh  pyproject.toml  requirements.txt  run_server.sh  server.py  setup_env.sh
apps/agent/src/: main.py
apps/agent/src/analyzer/: analyzer.py
apps/agent/src/config/: config.py
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json
apps/api/scripts/: credits-test.js
apps/api/src/: server.ts
apps/api/src/config/: mongodb.ts  redis.ts
apps/api/src/constants/: constants.ts
apps/api/src/controllers/: analyze-website.controller.ts  analyze-website.ts  user.controller.ts
apps/api/src/middleware/: auth.middleware.ts  check-credits.middleware.ts  error.middleware.ts  refresh-credits.middleware.ts  services.middleware.ts
apps/api/src/model/: user.model.ts
apps/api/src/routes/: ai.routes.ts  index.ts  stripe.routes.ts  (+2 more)
apps/backend/: README.md  ai_analyzer.py  analyzer.py  checklist.txt  config.py  requirements.txt  run.sh
apps/frontend/: .env.example  .gitignore  next.config.ts  package.json
apps/frontend/api-lists/: index.ts
apps/frontend/helpers/: functions.ts
(+28 files in other folders)
