[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ui-analyzer-agent"
version = "0.1.0"
description = "UI Analysis agent service"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.40.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=2.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]