[project]
name = "ui-analyzer-agent"
version = "0.1.0"
description = "UI Analysis agent service"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.116.1",
    "langchain-google-genai==2.1.9",
    "langchain-openai==0.3.28",
    "playwright==1.54.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "structlog==25.4.0",
    "tenacity==9.1.2",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "fastapi[standard]",
    "orjson==3.11.1",
    "httpx==0.28.1",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "black==25.1.0",
    "flake8==7.3.0",
    "mypy==1.17.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]